frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
