virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway  
  http:
  - match:
    - uri:
        prefix: /backend
    rewrite:
      uri: /
    route:
    - destination:
        host: backend-service 
        port:
          number: 80
